--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/mint.css",
               "src/styles.css"
             ],
             "scripts": []
